* specify permission and remove delay

--- a/.github/workflows/sync-and-validate-master.yml
+++ b/.github/workflows/sync-and-validate-master.yml
@@ -8,10 +8,11 @@ on:
 jobs:
   sync-fork:
     name: Sync master
+    permissions: write-all
     runs-on: ubuntu-latest
 
     steps:
-      - run: sleep 30s; gh repo sync Windows-on-ARM-Experiments/openssl -b master
+      - run: gh repo sync Windows-on-ARM-Experiments/openssl -b master
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
