--- a/.github/workflows/sync-and-validate-master.yml
+++ b/.github/workflows/sync-and-validate-master.yml
@@ -9,9 +9,10 @@ jobs:
   sync-fork:
     name: Sync master
     runs-on: ubuntu-latest
+    permissions: write-all
 
     steps:
-      - run: gh repo sync Windows-on-ARM-Experiments/openssl -b master --force
+      - run: gh repo sync Windows-on-ARM-Experiments/openssl -b master
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
