--- a/.github/workflows/sync-and-validate-master.yml
+++ b/.github/workflows/sync-and-validate-master.yml
@@ -1,4 +1,4 @@
-name: Sync and validate master branch on Arm64 Windows
+name: : Valitate upstream master branch on Arm64 Windows
 
 on:
   workflow_dispatch:
