* add repository input to workflow call

--- a/.github/workflows/ci-arm64.yml
+++ b/.github/workflows/ci-arm64.yml
@@ -26,6 +26,11 @@ on:
         type: boolean
   workflow_call:
     inputs:
+      repository: 
+        description: 'Repository name'
+        required: false
+        default: ${{ github.repository }}
+        type: string
       branch:
         description: 'Branch name'
         required: false
