--- a/.github/workflows/ci-arm64.yml
+++ b/.github/workflows/ci-arm64.yml
@@ -5,6 +5,10 @@ on:
     branches: [ "dev" ]
   workflow_dispatch:
     inputs:
+      repository: 
+        description: 'Repository name'
+        required: false
+        type: string
       branch:
         description: 'Branch name'
         required: false
@@ -35,14 +39,16 @@ jobs:
     - name: Git checkout
       uses: actions/checkout@v3
       with:
+        repository: ${{ inputs.repository }} 
         ref: ${{ inputs.branch }}
     
     - name: Build OpenSSL on Windows Arm64 with MSVC
       shell: cmd
       run: |
         echo on
-        git fetch origin ${{ github.event.repository.default_branch }}
-        git checkout origin/${{ github.event.repository.default_branch }} -- .github/workflows/scripts
+        git remote add WoA https://github.com/Windows-on-ARM-Experiments/openssl.git
+        git fetch WoA ${{ github.event.repository.default_branch }}
+        git checkout WoA/${{ github.event.repository.default_branch }} -- .github/workflows/scripts
         call "%ProgramFiles%\Microsoft Visual Studio\2022\Community\VC\Auxiliary\Build\vcvarsall.bat" arm64
         set VSCMD_DEBUG=3
         set PATH=%PATH%;%VCINSTALLDIR%\Tools\Llvm\ARM64\bin
@@ -63,14 +69,16 @@ jobs:
     - name: Git checkout
       uses: actions/checkout@v3
       with:
+        repository: ${{ inputs.repository }} 
         ref: ${{ inputs.branch }}
 
     - name: Build OpenSSL on Windows Arm64 with clang-cl
       shell: cmd
       run: |
         echo on
-        git fetch origin ${{ github.event.repository.default_branch }}
-        git checkout origin/${{ github.event.repository.default_branch }} -- .github/workflows/scripts
+        git remote add WoA https://github.com/Windows-on-ARM-Experiments/openssl.git
+        git fetch WoA ${{ github.event.repository.default_branch }}
+        git checkout WoA/${{ github.event.repository.default_branch }} -- .github/workflows/scripts
         call "%ProgramFiles%\Microsoft Visual Studio\2022\Community\VC\Auxiliary\Build\vcvarsall.bat" arm64
         set VSCMD_DEBUG=3
         set PATH=%PATH%;%VCINSTALLDIR%\Tools\Llvm\ARM64\bin
@@ -91,12 +99,14 @@ jobs:
     - name: Git checkout
       uses: actions/checkout@v3
       with:
+        repository: ${{ inputs.repository }} 
         ref: ${{ inputs.branch }}
 
     - name: Build OpenSSL on Linux AArch64 with GCC
       run: |
-        git fetch origin ${{ github.event.repository.default_branch }}
-        git checkout origin/${{ github.event.repository.default_branch }} -- .github/workflows/scripts
+        git remote add WoA https://github.com/Windows-on-ARM-Experiments/openssl.git
+        git fetch WoA ${{ github.event.repository.default_branch }}
+        git checkout WoA/${{ github.event.repository.default_branch }} -- .github/workflows/scripts
         ./Configure
         make
         make test
