--- a/.github/workflows/sync-and-validate-master.yml
+++ b/.github/workflows/sync-and-validate-master.yml
@@ -18,7 +18,7 @@ jobs:
       run: echo $upstream_head_hash
 
     - name: Valitate upstream master Arm64 Windows build
-      uses: Windows-on-ARM-Experiments/openssl/.github/workflows/ci-arm64.yml
+      uses: Windows-on-ARM-Experiments/openssl/.github/workflows/ci-arm64.yml@dev
       with:
         repository: openssl/openssl
         branch: ${{ env.upstream_head_hash }}
