--- a/.github/workflows/sync-and-validate-master.yml
+++ b/.github/workflows/sync-and-validate-master.yml
@@ -18,9 +18,9 @@ jobs:
       run: echo $upstream_head_hash
 
   validate-arm64-windows:
-    - name: Valitate upstream master Arm64 Windows build
-      needs: get-upstream-head-hash
-      uses: Windows-on-ARM-Experiments/openssl/.github/workflows/ci-arm64.yml@dev
-      with:
-        repository: openssl/openssl
-        branch: ${{ env.upstream_head_hash }}
+    name: Valitate upstream master Arm64 Windows build
+    needs: get-upstream-head-hash
+    uses: Windows-on-ARM-Experiments/openssl/.github/workflows/ci-arm64.yml@dev
+    with:
+      repository: openssl/openssl
+      branch: ${{ env.upstream_head_hash }}
