--- a/.github/workflows/sync-and-validate-master.yml
+++ b/.github/workflows/sync-and-validate-master.yml
@@ -23,4 +23,4 @@ jobs:
     uses: Windows-on-ARM-Experiments/openssl/.github/workflows/ci-arm64.yml@dev
     with:
       repository: openssl/openssl
-      branch: ${{ env.upstream_head_hash }}
+      branch: 
