--- a/.github/workflows/sync-and-validate-master.yml
+++ b/.github/workflows/sync-and-validate-master.yml
@@ -20,7 +20,7 @@ jobs:
   validate-arm64-windows:
     name: Valitate upstream master Arm64 Windows build
     needs: get-upstream-head-hash
-    uses: Windows-on-ARM-Experiments/openssl/.github/workflows/ci-arm64.yml@dev
+    uses: ./.github/workflows/ci-arm64.yml
     with:
       repository: openssl/openssl
       branch: 
