--- a/.github/workflows/sync-and-validate-master.yml
+++ b/.github/workflows/sync-and-validate-master.yml
@@ -6,6 +6,8 @@ on:
     - cron: "0 3 * * *"
 
 jobs:
+  env:
+    upstream_head_hash: 
 
   get-upstream-head-hash:
     runs-on: ubuntu-latest
@@ -23,4 +25,4 @@ jobs:
     uses: ./.github/workflows/ci-arm64.yml
     with:
       repository: openssl/openssl
-      branch: 
+      branch: ${{ env.upstream_head_hash }}
