--- a/.github/workflows/sync-and-validate-master.yml
+++ b/.github/workflows/sync-and-validate-master.yml
@@ -5,20 +5,17 @@ on:
   schedule:
     - cron: "0 3 * * *"
 
-env:
-  upstream_head_hash: master 
-
 jobs:
 
   get-upstream-head-hash:
     runs-on: ubuntu-latest
-    
+    outputs:
+      upstream_head_hash: ${{ steps.get_upstream_hash.outputs.upstream_head_hash }}
+\
     steps:
     - name: Getting upstream the head hash
-      run: echo "upstream_head_hash=$(git ls-remote https://github.com/openssl/openssl.git master | awk '{print $1}')" >> $GITHUB_ENV
-
-    - name: Test
-      run: echo $upstream_head_hash
+      id: get_upstream_hash
+      run: echo "upstream_head_hash=$(git ls-remote https://github.com/openssl/openssl.git master | awk '{print $1}')" >> "$GITHUB_OUTPUT"
 
   validate-arm64-windows:
     name: Valitate upstream master Arm64 Windows build
@@ -26,4 +23,4 @@ jobs:
     uses: ./.github/workflows/ci-arm64.yml
     with:
       repository: openssl/openssl
-      branch: ${{ env.upstream_head_hash }}
+      branch: ${{ needs.get-upstream-head-hash.output.upstream_head_hash }}
