--- a/.github/workflows/validate-upstream-master.yml
+++ b/.github/workflows/validate-upstream-master.yml
@@ -1,4 +1,4 @@
-name: Valitate upstream master branch on Arm64 Windows
+name: Validate upstream master branch on Arm64 Windows
 
 on:
   workflow_dispatch:
