--- a/.github/workflows/ci-arm64.yml
+++ b/.github/workflows/ci-arm64.yml
@@ -217,34 +217,8 @@ jobs:
     - name: Create PR for a benchmark snapshot
       run: |
         set -x
-        git config --global user.name "$GITHUB_ACTOR"
-        git config --global user.email "$GITHUB_ACTOR@users.noreply.github.com"
-        git fetch origin ${{ github.event.repository.default_branch }}
-        git checkout origin/${{ github.event.repository.default_branch }} -- .github/workflows/scripts
-        branch=${{ inputs.branch }}
-        [[ -z $branch ]] && branch=$(git symbolic-ref --short HEAD)
-        [ ! -d .github/benchmark_snapshot ] && mkdir -p .github/benchmark_snapshot
-        benchmark_snapshot_result=$(date +".github/benchmark_snapshot/${branch}_%Y-%m-%d_%H_%M_%S_gcc_vs_clang.txt")
-        [ ! -d .assets/benchmark ] && mkdir -p .assets/benchmark
-        benchmark_image=$(date +".assets/benchmark/benchmark_snapshot_%Y-%m-%d_%H_%M_%S_gcc_vs_clangcl.png")
-        . .github/workflows/scripts/benchmark.sh benchmark_snapshot $benchmark_snapshot_result $benchmark_image
-        git restore .github/workflows/scripts
-        git fetch origin assets
-        git checkout assets
-        git add $benchmark_image
-        git commit -am "* add a benchmark image"
-        git push
-        git checkout ${{ github.event.repository.default_branch }} --
-        git checkout -b benchmark_snapshot
-        git add .github/benchmark_snapshot
-        git commit -am "* add a benchmark snapshot"
-        git push --force origin benchmark_snapshot
-        PR_RESPONSE=$(curl -X POST -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-          -d '{
-            "title": "Add benchmark snapshot",
-            "body": "![image](https://raw.githubusercontent.com/Windows-on-ARM-Experiments/openssl/assets/'$benchmark_asset')",
-            "head": "benchmark_snapshot",
-            "base": "${{ github.event.repository.default_branch }}"
-          }' \
-          https://api.github.com/repos/$GITHUB_REPOSITORY/pulls)
-        echo "$PR_RESPONSE"
+        . .github/workflows/scripts/benchmark.sh create_benchmark_snapshot_pr
+      env:
+        BRANCH: ${{ inputs.branch }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        DEFAULT_BRANCH: ${{ github.event.repository.default_branch }}
