--- a/.github/workflows/ci-arm64.yml
+++ b/.github/workflows/ci-arm64.yml
@@ -53,7 +53,32 @@ on:
         description: 'Branch name'
         required: false
         type: string
-
+      openssl_windows_arm64_msvc_build:
+        description: 'OpenSSL Windows Arm64 MSVC build'
+        required: false
+        default: true
+        type: boolean
+      openssl_windows_arm64_clangcl_build:
+        description: 'OpenSSL Windows Arm64 clang-cl build'
+        required: false
+        default: true
+        type: boolean
+      openssl_linux_aarch64_gcc_build:
+        description: 'OpenSSL Linux AArch64 gcc build'
+        required: false
+        default: true
+        type: boolean
+      benchmark:
+        description: 'Execute benchmark'
+        required: false
+        default: true
+        type: boolean
+      verify_benchmark:
+        description: 'Verify benchmark regression'
+        required: false
+        default: true
+        type: boolean
+  
 jobs:
   build-openssl-windows-arm64-msvc:
     if: ${{ inputs.openssl_windows_arm64_msvc_build }}
