Add GCC Windows on arm64 build config

--- a/Configurations/10-main.conf
+++ b/Configurations/10-main.conf
@@ -1684,6 +1684,17 @@ my %targets = (
         shared_rcflag    => "--target=pe-x86-64",
         multilib         => "64",
     },
+    "mingw-arm64" => {
+        inherit_from     => [ "mingw-common" ],
+        cflags           => "-march=armv8-a+crypto",
+        sys_id           => "MINGW64",
+        bn_ops           => add("SIXTY_FOUR_BIT"),
+        asm_arch         => 'aarch64',
+        uplink_arch      => undef,
+        perlasm_scheme   => "win64",
+        shared_rcflag    => "--target=aarch64-w64-mingw32",
+        multilib         => "64",
+    },
 
 #### UEFI
     "UEFI" => {
